# machine-solidity-step

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  AUTHORS  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.ram  Dockerfile.step  LICENSE  Makefile  README.md  buidler.config.ts  deploy_ram_tests.sh  deploy_step_tests.sh  foundry.toml  hardhat.config.ts  npm-shrinkwrap.json  package-lock.json  package.json  prepare_byte_codes.sh  prepare_python_test.sh  requirements.txt  shasum-download  shasum-mock  shasum-prod  shasumfile  truffle-config.js  truffle.js  tsconfig.json
.github/: pull_request_template.md
abi/: bsc_testnet.json  goerli.json  kovan.json  matic_testnet.json  rinkeby.json
contracts/: AccessLogs.sol  AddressTracker.sol  CLINT.sol  CSR.sol  CSRExecute.sol  CSRReads.sol  CSR_reads.sol  CSR_writes.sol  Decorated.sol  Exception.sol  Exceptions.sol  Execute.sol  Fetch.sol  HTIF.sol  Instantiator.sol  Interrupts.sol  MMInstantiator.sol  MMInterface.sol  Memory.sol  MemoryAccessLog.sol  MemoryInteractor.sol  MemoryManager.sol  Merkle.sol  MetaStep.sol  Migrations.sol  MockMMInstantiator.sol  MonolithicRiscV.sol  MstatusConstants.sol  PMA.sol  PRVLevelsConstants.sol  RealTimeClock.sol  RiscVConstants.sol  RiscVDecoder.sol  RiscVMachineState.sol  RiscVMain.sol  ShadowAddresses.sol  Step.sol  TestMemoryInteractor.sol  TestNoMerkleMM.sol  TestRamMMInstantiator.sol  (+10 more)
deploy/: 01_interpret.ts  01_libs.ts  01_uarch.ts  02_meta.ts
helper_scripts/: generate_AccessLogs.sh  (+12 more)
rust_test/: Cargo.toml  build.rs
rust_test/src/: main.rs
(+439 files in other folders)
